<resources>
    <string name="app_name">AD Caregiver App</string>
    <string name="bottom_navigation_left_text">Nursery</string>
    <string name="bottom_navigation_center_text">My Garden</string>
    <string name="bottom_navigation_right_text">Community Garden</string>
    <string name="steps">Steps</string>
    <string name="nursery">Nursery</string>
    <string name="my_n_garden">My \n Garden</string>
    <string name="community_garden">Community Garden</string>

    <!-- Strings related to LoginUser -->
    <string name="login_instruction">Please login to continue using ADC</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_username">Something wrong with this username. Please retype.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_cred">The username and password is not correct. Please retype and press login.</string>
    <string name="error_login_no_internet">No internet connection. Please reconnect and login again.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="unlock_more_colors_by_sharing_a_story">Unlock more flowers by sharing a story!</string>
    <string name="stories">Stories</string>
    <string name="share_story">Share Story</string>
    <string name="back">Back</string>
    <string name="exercise">Exercise</string>

    <string name="logs">Logs</string>
    <string name="tutorial">Tutorials</string>
    <string name="endurance">Endurance</string>
    <string name="balance">Balance</string>
    <string name="strength">Strength</string>
    <string name="flexibility">Flexibility</string>
    <string name="garden_heading">\'s Garden</string>
    <string name="select_a_new_seed_to_plant_some_flowers_are_more_challenging_to_grow">Select a new seed to plant. Some flowers are more challenging to grow!</string>
    <string name="this_week_my_step_goal_is_last_week">This week, my step goal is ________ last week</string>

    <plurals name="numberOfSteps">

        <item quantity="one">%d step was taken.</item>
        <item quantity="other">%d steps were taken.</item>
    </plurals>

    <plurals name="numberOfExercisesLogged">

        <item quantity="one">You logged %d exercise.</item>
        <item quantity="other">You logged %d exercises.</item>
    </plurals>


    <plurals name="numberOfStoriesPosted">

        <item quantity="one">Posted %d story.</item>
        <item quantity="other">Posted %d stories.</item>
    </plurals>

</resources>
