<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/flexibility"
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="@color/green3"
            android:text="@string/flexibility"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/balance"
            app:layout_constraintEnd_toEndOf="@+id/strength"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/strength"
            app:layout_constraintTop_toTopOf="@+id/balance"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/balance"
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:background="@color/green7"
            android:text="@string/balance"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/endurance"
            app:layout_constraintTop_toBottomOf="@+id/endurance" />

        <Button
            android:id="@+id/endurance"
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/green4"
            android:text="@string/endurance"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/balance"
            app:layout_constraintEnd_toStartOf="@+id/strength"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.871" />

        <Button
            android:id="@+id/strength"
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:layout_marginEnd="24dp"
            android:background="@color/green6"
            android:text="@string/strength"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/endurance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/endurance"
            app:layout_constraintTop_toTopOf="@+id/endurance"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>
</layout>
